fixes and alignment issue with the breadcrumbs

--- a/components/vf-breadcrumbs/vf-breadcrumbs.scss
+++ b/components/vf-breadcrumbs/vf-breadcrumbs.scss
@@ -3,8 +3,9 @@
 
 .vf-breadcrumbs {
   display: flex;
-  grid-column: main;
+  grid-column: 1 / -1; // so that it takes up all the space no matter the parent grid
   margin-bottom: $vf-breadcrumbs__margin--bottom;
+  margin-top: $vf-breadcrumbs__margin--top;
 }
 
 .vf-breadcrumbs__item {
